reversed opponent by size